--- a/2tables_copy_index.html
+++ b/2tables_copy_index.html
@@ -13,10 +13,12 @@
 	<p>Founder and CEO of <strong><a href="https://www.appbrewery.co/courses">The App Brewery.</a></strong></p>
 	<p>I am a web developer. I &#10084;coffee and brew my own beers.</p></td>
 		</tr>
-	</table cellspacing="10">
-	<hr>
+	</table>
 	<h3>Skills</h3>
-	<table>
+<table>
+	<tr>
+		<td>
+			<table>
 		<tr>
 			<td>Web Development using HTML5 and CSS3</td>
 			<td>&#9733;&#9733;&#9733;&#9733;&#9733;</td>
@@ -30,14 +32,34 @@
 			<td>&#9733;&#9733;&#9733;</td>
 		</tr>
 	</table>
-	
+		</td>
+		<td>
+			<table>
+		<tr>
+			<td>Networking and System Administration Services</td>
+			<td>&#9733;&#9733;&#9733;&#9733;&#9733;</td>
+		</tr>
+		<tr>
+			<td>Windows Server 2012/16</td>
+			<td>&#9733;&#9733;&#9733;&#9733;</td>
+		</tr>
+		<tr>
+			<td>Project Management Software | MS Project 2016</td>
+			<td>&#9733;&#9733;&#9733;</td>
+		</tr>
+	</table>
+		</td>
+	</tr>
+</table>
+
+		
 	<hr>
 	<h3>Books and Teaching</h3>
 	<ul>
 		<li>The Complete iOS App Development Bootcamp</li>
 		<li>The Complete iOS App Development Bootcamp</li>
 	</ul>
-	<hr>
+	
 	<h3>Work Experience</h3>
 	<table>
 		<thead>
