--- a/contact.html
+++ b/contact.html
@@ -6,9 +6,27 @@
 </head>
 <body>
 	<h1>My Contact Details</h1>
-	<p>My Address</p>
-	<p>My Phone number</p>
-	<p>My email address</p>
-
+	<p>110 Roosevelt Ave, Norwood, MA 02062</p>
+	<p>781-688-1529</p>
+	<p>jeansanon180@gmail.com</p>
+	<form class="" action="index.html" method="post">
+		<label>Your Name: </label>
+		<input type="text" name="" value=""><br>
+		<!-- <input type="color" name="" value=""><br> -->
+		<label>Your Email:</label>
+		<input type="email" name="" value=""><br>
+		<label>Your Message:</label><br>
+		<textarea name="name" rows="10" cols="30"></textarea><br>
+		<!-- <input type="password" name=""> -->
+		<!--
+		<input type="text"><br>
+		<input type="submit"><br>
+		<input type="file"><br>
+		<input type="data"><br>
+		<input type="radio"><br>
+		<input type="range"><br>
+		 -->
+		<input type="submit" name="">
+	</form>
 </body>
 </html>
