--- a/index.html
+++ b/index.html
@@ -3,31 +3,34 @@
 <head>
 	<meta charset="utf-8">
 	<title>Karlo Sanon</title>
+	
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
+<!-- <body style="background-color: powderblue;"> IN-LINE CSS -->
 	<table cellspacing="20">
 		<tr>
-			<td><img src="my_pic.jpg" alt="profile picture"></td>
+			<td><img src="tulip.png" alt="profile picture" style="width:100px, height:100px;"></td>
 			<td><h1>Karlo Sanon</h1>
-	<p>Founder and CEO of <strong><a href="https://www.appbrewery.co/courses">The App Brewery.</a></strong></p>
-	<p>I am a web developer. I &#10084;coffee and brew my own beers.</p></td>
+	<p>Founder and CEO of <strong><a href="https://jsanon01.github.io/fcc-portfolio/">CABLONET.</a></strong></p>
+	<p>I am a Web Developer. I ❤️ Internet and Literature.</p></td>
 		</tr>
 	</table cellspacing="10">
 	<hr>
 	<h3>Skills</h3>
 	<table>
 		<tr>
-			<td>Web Development using HTML5 and CSS3</td>
-			<td>&#9733;&#9733;&#9733;&#9733;&#9733;</td>
+			<td>Web Development | HTML5 and CSS3</td>
+			<td>⭐⭐⭐⭐⭐</td>
 		</tr>
 		<tr>
 			<td>AWS | Designing VPCs and EC2 instances</td>
-			<td>&#9733;&#9733;&#9733;&#9733;</td>
+			<td>⭐⭐⭐⭐</td>
 		</tr>
 		<tr>
-			<td>Programming language | Python</td>
-			<td>&#9733;&#9733;&#9733;</td>
+			<td>Programming Language | Python</td>
+			<td>⭐⭐⭐</td>
 		</tr>
 	</table>
 	
@@ -47,15 +50,16 @@
 			</tr>
 		</thead>
 		<tr>
-			<td>2010 - 2013</td>
-			<td>Lead Developer at Tempo App</td>
+			<td>2009 - 2019</td>
+			<td>School Bus Driver at NPS in Norwood, MA</td>
 		</tr>
 		<tr>
-			<td>2010</td>
-			<td>Researcher at Institute of Cognitive Neuroscience</td>
+			<td>2005 - 2009</td>
+			<td>Mixer Truck Driver at WDC in Hiram, GA</td>
 		</tr>
 	</table>
 	<hr>
+	<br>
 	<a href="hobbies.html">My Hobbies</a>
 	<a href="contact.html"> Contact Me</a>
 </body>
