--- a/2tables_copy_index.html
+++ b/2tables_copy_index.html
@@ -20,7 +20,7 @@
 		<td>
 			<table>
 		<tr>
-			<td>Web Development using HTML5 and CSS3</td>
+			<td>Web Development | HTML5 and CSS3</td>
 			<td>&#9733;&#9733;&#9733;&#9733;&#9733;</td>
 		</tr>
 		<tr>
@@ -28,7 +28,7 @@
 			<td>&#9733;&#9733;&#9733;&#9733;</td>
 		</tr>
 		<tr>
-			<td>Programming language | Python</td>
+			<td>Programming Language | Python</td>
 			<td>&#9733;&#9733;&#9733;</td>
 		</tr>
 	</table>
@@ -36,7 +36,7 @@
 		<td>
 			<table>
 		<tr>
-			<td>Networking and System Administration Services</td>
+			<td>Networking | System Administration Services</td>
 			<td>&#9733;&#9733;&#9733;&#9733;&#9733;</td>
 		</tr>
 		<tr>
