--- a/contact.html
+++ b/contact.html
@@ -3,20 +3,22 @@
 <head>
 	<meta charset="utf-8">
 	<title>My Contact</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<h1>My Contact Details</h1>
 	<p>110 Roosevelt Ave, Norwood, MA 02062</p>
 	<p>781-688-1529</p>
 	<p>jeansanon180@gmail.com</p>
-	<form class="" action="index.html" method="post">
+	<form action="mailto:jeansanon180@gmail.com" method="post" enctype="text/plain">
+	<!-- <form class="" action="index.html" method="post"> -->
 		<label>Your Name: </label>
-		<input type="text" name="" value=""><br>
+		<input type="text" name="yourName" value=""><br>
 		<!-- <input type="color" name="" value=""><br> -->
 		<label>Your Email:</label>
-		<input type="email" name="" value=""><br>
+		<input type="email" name="yourEmail" value=""><br>
 		<label>Your Message:</label><br>
-		<textarea name="name" rows="10" cols="30"></textarea><br>
+		<textarea name="yourMessage" rows="10" cols="30"></textarea><br>
 		<!-- <input type="password" name=""> -->
 		<!--
 		<input type="text"><br>
